<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RoombaController</string>
    <string name="title_settings">Settings</string>
    <string name="title_manual">Manual</string>
    <string name="title_program">Program</string>
    <string name="title_logs">Log</string>
    
    <string name="roomba">Roomba</string>
    
    <string name="clean">Clean</string>
    
    <string name="dock">Dock</string>
    
    <string name="cleanOnSpot">Clean On Spot</string>
    
    <string name="stop">Stop</string>
    
    <string name="sensors">Sensors</string>
    
    <string name="battery">Battery</string>
    
    <string name="motorSpeed">Motor Speed</string>
    
    <string name="standardSpeed">100mm</string>
</resources>